cmake_minimum_required(VERSION 3.13)
project(basic_algorithm_cp)

set(CMAKE_CXX_STANDARD 17)
#set(CMAKE_BUILD_TYPE Debug)

add_executable(basic_algorithm_cp main.cpp)
add_executable(uva272 bac/ch3/uva272.cpp)
add_executable(uva10082 bac/ch3/uva10082.cpp)
add_executable(uva401 bac/ch3/uva401.cpp)
add_executable(uva340 bac/ch3/uva340.cpp)
add_executable(uva1583 bac/ch3/uva1583.cpp)
add_executable(uva1585 bac/ch3/uva1585.cpp)
add_executable(L001 bac/leetcode/L001.cpp)
add_executable(L002 bac/leetcode/L002.cpp)
add_executable(L003 bac/leetcode/L003.cpp)
add_executable(L004 bac/leetcode/L004.cpp)
add_executable(L005 bac/leetcode/L005.cpp)
add_executable(L006 bac/leetcode/L006.cpp)
add_executable(L007 bac/leetcode/L007.cpp)
add_executable(L008 bac/leetcode/L008.cpp)
add_executable(L009 bac/leetcode/L009.cpp)
add_executable(L010 bac/leetcode/L010.cpp)
add_executable(L011 bac/leetcode/L011.cpp)
add_executable(L012 bac/leetcode/L012.cpp)
add_executable(L013 bac/leetcode/L013.cpp)
add_executable(L014 bac/leetcode/L014.cpp)
add_executable(L015 bac/leetcode/L015.cpp)
add_executable(L016 bac/leetcode/L016.cpp)
add_executable(L017 bac/leetcode/L017.cpp)
add_executable(L018 bac/leetcode/L018.cpp)
add_executable(L019 bac/leetcode/L019.cpp)
add_executable(L020 bac/leetcode/L020.cpp)