cmake_minimum_required(VERSION 3.13)
project(basic_algorithm_cp)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_TYPE Debug)

add_executable(uva272 src/ch3/uva272.cpp)
add_executable(uva10082 src/ch3/uva10082.cpp)
add_executable(uva401 src/ch3/uva401.cpp)
add_executable(uva340 src/ch3/uva340.cpp)
add_executable(uva1583 src/ch3/uva1583.cpp)
add_executable(uva1585 src/ch3/uva1585.cpp)
add_executable(L001 src/leetcode/L001.cpp)
add_executable(L002 src/leetcode/L002.cpp)
add_executable(L003 src/leetcode/L003.cpp)
add_executable(L004 src/leetcode/L004.cpp)
add_executable(L005 src/leetcode/L005.cpp)
add_executable(L006 src/leetcode/L006.cpp)
add_executable(L007 src/leetcode/L007.cpp)
add_executable(L008 src/leetcode/L008.cpp)
add_executable(L009 src/leetcode/L009.cpp)
add_executable(L010 src/leetcode/L010.cpp)
add_executable(L011 src/leetcode/L011.cpp)
add_executable(L012 src/leetcode/L012.cpp)
add_executable(L013 src/leetcode/L013.cpp)
add_executable(L014 src/leetcode/L014.cpp)
add_executable(L015 src/leetcode/L015.cpp)
add_executable(L016 src/leetcode/L016.cpp)
add_executable(L017 src/leetcode/L017.cpp)
add_executable(L018 src/leetcode/L018.cpp)
add_executable(L019 src/leetcode/L019.cpp)
add_executable(L020 src/leetcode/L020.cpp)
add_executable(L021 src/leetcode/L021.cpp)
add_executable(L022 src/leetcode/L022.cpp)
add_executable(L023 src/leetcode/L023.cpp)
add_executable(L024 src/leetcode/L024.cpp)
add_executable(L025 src/leetcode/L025.cpp)
add_executable(L026 src/leetcode/L026.cpp)
add_executable(L027 src/leetcode/L027.cpp)
add_executable(L028 src/leetcode/L028.cpp)
add_executable(L029 src/leetcode/L029.cpp)
add_executable(L030 src/leetcode/L030.cpp)
add_executable(L146 src/leetcode/L146.cpp)
add_executable(L460 src/leetcode/L460.cpp)

#严蔚敏版数据结构
add_executable(KMP src/data_structure/KMP.cpp)